--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,20 @@ body {
     -o-border-radius: 20px;
 }
 
-.calculator .value{
+.calculator {
+    position: relative;
+    display: grid;
+}
+
+.calculator .value {
+    position: relative;
+    grid-column: span 4;
+    height: 100px;
+    left: 10px;
+    width: calc(100%-20px);
+}
+
+.calculator .value {
     position: relative;
     grid-column: span 4;
     height: 100px;
@@ -36,7 +49,7 @@ body {
     border: none;
     outline: none;
     background: #a7af7c;
-    margin: 10px;
+    margin-bottom: 10px;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -47,7 +60,7 @@ body {
     font-size: 2em;
 }
 
-.calculator span{
+.calculator span {
     color: #fff;
     position: relative;
     display: grid;
@@ -56,10 +69,10 @@ body {
     height: 80px;
     color: #fff;
     place-items: center;
-    background: linear-gradient(180deg,#2f2f2f,#3f3f3f);
-    box-shadow: inset -8px 0 8px rgba(0,0,0,0.15),
-    inset 0 -8px 8px rgba(0,0,0,0.25),
-    0 0 0 2px rgba(0, 0, 0, 0.75). 10px 20px 25px rgba(0,0,0,0.5);
+    background: linear-gradient(180deg, #2f2f2f, #3f3f3f);
+    box-shadow: inset -8px 0 8px rgba(0, 0, 0, 0.15),
+        inset 0 -8px 8px rgba(0, 0, 0, 0.25),
+        0 0 0 2px rgba(0, 0, 0, 0.75), 10px 20px 25px rgba(0, 0, 0, 0.5);
     user-select: none;
     cursor: pointer;
     font-weight: 400;
@@ -67,45 +80,64 @@ body {
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -o-border-radius: 10px;
-
-    box-shadow: 0 0 0 2px rgba(0,0,0,0.75);
-
 }
 
-.calculator span::before{
+.calculator span::before {
     content: '';
     position: absolute;
-    top:3px;
+    top: 3px;
     left: 4px;
     bottom: 14px;
     right: 12px;
     border-radius: 10px;
-    background: linear-gradient(90deg,#2d2d2d,#4d4d4d);
+    background: linear-gradient(90deg, #2d2d2d, #4d4d4d);
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-    box-shadow: -5px -5px 15px rgba(0,0,0,1),10px 5px 10px rgba(0,0,0,0.15);
+    box-shadow: -5px -5px 15px rgba(0, 0, 0, 1), 10px 5px 10px rgba(0, 0, 0, 0.15);
     border-left: 1px solid #0004;
     border-bottom: 1px solid #0004;
     border-top: 1px solid #0004;
 }
 
-.calculator span:active{
+.calculator span:active {
     filter: brightness(1.5);
     -webkit-filter: brightness(1.5);
 }
 
-.calculator span i{
+.calculator span i {
     position: relative;
     font-style: normal;
     font-size: 1.5rem;
     text-transform: uppercase;
 }
 
-.calculator .clear{
+.calculator .clear {
     grid-column: span 2;
     width: 180px;
     background: red;
 }
 
+.calculator .clear::before {
+    background: linear-gradient(90deg, #d20000, #ffffff5c);
+    border-left: 1px solid #fff4;
+    border-bottom: 1px solid #fff4;
+    border-top: 1px solid #fff4;
+}
+
+.calculator .plus {
+    grid-row: span 2;
+    height: 180px;
+}
+
+.calculator .equal {
+    background: #2196f3;
+}
+
+.calculator .equal::before {
+    background: linear-gradient(90deg, #1479c9, #ffffff5c);
+    border-left: 1px solid #fff4;
+    border-bottom: 1px solid #fff4;
+    border-top: 1px solid #fff4;
+}
